---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: ??. ??. 2021
  Features:
    - Improved some graphics.
    - Can now skip splash cutscene.
    - Improved Tips-And-Tricks.
    - Players permissions reduced drastically to minimize bugs and trolss.
    - Tank can now drive through trail walls left by players indefinitely.
    - Bigger explosions and fire on dying that destroys trails in vicinity.
    - GUI now shows applied effects, and sorts according to score.
  Changes:
    - Increase tank effect time from 5 to 10 seconds.
    - Nuke time decreased. Now drops close to activation position.
  Bugfixes:
    - Fixed case where effects can become corrupted.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 02. 06. 2021
  Bugfixes:
    - Fixed crash in nuke effect.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 02. 06. 2021
  Features:
    - Added a tips-and-tricks about who effects are applied to.
  Changes:
    - Nuke siren now plays at location where nuke will hit.
    - Biters are no slightly faster.
    - Effects are only created roughly every 2 seconds.
    - Added/modified some other sounds.
  Bugfixes:
    - No longer allow passengers in lobby vehicles.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 31. 05. 2021
  Features:
    - Initial release.