@@ -85,7 +85,7 @@ return {
             warm_up_time = 3*60,    -- How long before the shot is fired
             shell_travel_time = 3*60,
             player_proximity = 20,   -- How close nuke will drop to player
-            ticks_to_live = 10*60
+            ticks_to_live = 6*60
         },
         invert = {
             ticks_to_live = 5*60,
