@@ -14,6 +14,7 @@ Date: ??. ??. 2021
     - Nuke time decreased. Now drops close to activation position.
   Bugfixes:
     - Fixed case where effects can become corrupted.
+    - Nuke effects can now stack.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 02. 06. 2021
